--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: ${DB_DRIVER}
-    url: ${DB_URL}
+    url: ${LOCAL_DB_URL}
     username: ${DB_USER}
-    password: ${DB_PASSWORD}
+    password: ${LOCAL_DB_PASSWORD}
     hikari:
       minimum-idle: 1
       maximum-pool-size: 5
@@ -19,7 +19,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     defer-datasource-initialization: true
     properties:
       hibernate:
