--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     defer-datasource-initialization: true
     properties:
       hibernate:
@@ -27,3 +27,14 @@ spring:
         show_sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
+
+  devtools:
+    livereload:
+      enabled: true
+  thymeleaf:
+    cache: false
+    prefix: file:src/main/resources/templates/
+
+youtube:
+    api:
+      key: ${YOUTUBE_API_KEY}
