--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ configurations {
     }
 }
 
+configurations.all {
+    exclude group: 'commons-logging', module: 'commons-logging'
+}
+
 repositories {
     mavenCentral()
 }
