--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,10 @@ spring:
   thymeleaf:
     cache: false
     prefix: file:src/main/resources/templates/
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 youtube:
     api:
       key: ${YOUTUBE_API_KEY}
