refcator: url, id env로이동, 패키지이동, 시큐리티 api 로 시작하는 url모두 허용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,9 @@ spring:
 youtube:
     api:
       key: ${YOUTUBE_API_KEY}
+
+alan:
+    one:
+      url: ${ALAN_ONE_URL}
+client:
+  id: ${CLIENT_ID}
