--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.4.1'
     implementation 'com.google.oauth-client:google-oauth-client:1.35.0'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev20240417-2.0.0'
+
+    /* S3 */
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
