--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,3 +54,16 @@ alan:
       url: ${ALAN_ONE_URL}
 client:
   id: ${CLIENT_ID}
+
+cloud:
+  aws:
+    s3:
+      bucket: simsasookbak
+    stack:
+      auto: false
+    region:
+      static: ap-northeast-2
+    credentials:
+      accessKey: ${S3_ACCESS_KEY}
+      secretKey: ${S3_SECRET_KEY}
+
