Feat: #75 숙소등록 이미지등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,7 +73,7 @@ client:
 cloud:
   aws:
     s3:
-      bucket: simsasookbak
+      bucket: ${S3_BUCKET_NAME}
     stack:
       auto: false
     region:
