--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: github-action-workflow
 
 on:
   push:
-    branches: [ "release" ]
+    branches: [ "develop" ] #"release"
   pull_request:
-    branches: [ "release" ]
+    branches: [ "develop" ] #"release"
   workflow_dispatch:
 
 env:
