--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -77,7 +77,7 @@ cloud:
     stack:
       auto: false
     region:
-      static: ap-northeast-2
+      static: ${S3_REGION}
     credentials:
       accessKey: ${S3_ACCESS_KEY}
       secretKey: ${S3_SECRET_KEY}
