fix : 템플릿 경로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,8 +34,7 @@ spring:
 
   thymeleaf:
     cache: false
-    prefix: file:src/main/resources/templates/
-
+    prefix: classpath:/templates/
   schedule: # interval 1 hour
     cron : 0 0 0/1 * * *
     use : true
