--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,9 @@ name: github-action-workflow
 
 on:
   push:
-    branches: [ "release"  ] #"release" "develop"
+    branches: [ "release"  ] 
   pull_request:
-    branches: [ "release"  ] #"release" "develop"
+    branches: [ "release"  ] 
   workflow_dispatch:
 
 env:
